--- a/app/src/main/res/layout/list_test_activity.xml
+++ b/app/src/main/res/layout/list_test_activity.xml
@@ -5,7 +5,7 @@
     xmlns:chatview="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChatActivity"
+    tools:context=".activity.ChatActivity"
     >
 
 
