--- a/app/src/main/res/layout/chat_kit_activity.xml
+++ b/app/src/main/res/layout/chat_kit_activity.xml
@@ -8,7 +8,8 @@
     <FrameLayout
         android:id="@+id/chat_view"
         android:layout_width="match_parent"
-        android:layout_height="450dp" />
+        android:layout_height="wrap_content"
+        android:layout_above="@id/input"/>
 
     <com.stfalcon.chatkit.messages.MessageInput
         android:id="@+id/input"
