--- a/app/src/main/res/layout/chat_kit_activity.xml
+++ b/app/src/main/res/layout/chat_kit_activity.xml
@@ -5,11 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.stfalcon.chatkit.messages.MessagesList
-        android:id="@+id/messagesList"
+    <FrameLayout
+        android:id="@+id/chat_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/input" />
+        android:layout_height="450dp" />
 
     <com.stfalcon.chatkit.messages.MessageInput
         android:id="@+id/input"
