--- a/app/src/main/res/layout/adapter_item_message_text.xml
+++ b/app/src/main/res/layout/adapter_item_message_text.xml
@@ -1,49 +1,54 @@
-<LinearLayout
+<?xml version="1.0" encoding="utf-8"?>
+
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center_vertical"
-    android:layout_weight="1"
-    android:orientation="vertical"
-    android:paddingBottom="5dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:paddingTop="8dp"
+    tools:ignore="ExtraText">
+
+    <ImageView
+        android:id="@+id/image_message_profile"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+        <!--android:background="@drawable/circle"-->
+
 
     <TextView
-        android:id="@+id/txt_sender"
+        android:id="@+id/text_message_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:ellipsize="end"
-        android:fontFamily="sans-serif-bold"
-        android:singleLine="true"
-        android:paddingLeft="4dp"
-        android:paddingRight="4dp"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        tools:text="One very long sender name for testing purpose" />
+        android:textSize="12sp"
+        app:layout_constraintLeft_toRightOf="@+id/image_message_profile"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="4dp" />
 
     <TextView
-        android:id="@+id/txt_date"
+        android:id="@+id/text_message_body"
+        android:background="@drawable/rounded_rectangle_orange"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1970/01/01 00:00:00"
-        android:textSize="12sp" />
+        android:maxWidth="240dp"
+        android:padding="8dp"
+        android:textColor="#ffffff"
+        android:layout_marginTop="4dp"
+        app:layout_constraintTop_toBottomOf="@+id/text_message_name"
+        app:layout_constraintLeft_toRightOf="@+id/image_message_profile"
+        android:layout_marginLeft="8dp" />
 
-    <com.github.library.bubbleview.BubbleTextView
+    <TextView
+        android:id="@+id/text_message_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello BubbleTextVew"
-        android:padding="10dp"
-        android:textColor="@android:color/black"
-        android:id="@+id/txt_msg"
-        app:arrowWidth="8dp"
-        app:angle="8dp"
-        app:arrowHeight="10dp"
-        app:arrowPosition="14dp"
-        app:arrowLocation="left"
-        app:arrowCenter="true"
-        app:bubbleColor="#B2DFDB"/>
+        android:textSize="10sp"
+        app:layout_constraintLeft_toRightOf="@+id/text_message_body"
+        android:layout_marginLeft="4dp"
+        app:layout_constraintBottom_toBottomOf="@+id/text_message_body" />
 
-
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
