--- a/app/src/main/res/layout/adapter_item_message_image.xml
+++ b/app/src/main/res/layout/adapter_item_message_image.xml
@@ -13,7 +13,6 @@
         android:id="@+id/image_message_profile"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:src="@drawable/man_96"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent" />
@@ -29,14 +28,12 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="4dp" />
 
-    <TextView
-        android:id="@+id/text_message_body"
+    <ImageView
+        android:id="@+id/image_message_body"
         android:background="@drawable/rounded_rectangle_orange"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxWidth="240dp"
-        android:padding="8dp"
-        android:textColor="#ffffff"
         android:layout_marginTop="4dp"
         app:layout_constraintTop_toBottomOf="@+id/text_message_name"
         app:layout_constraintLeft_toRightOf="@+id/image_message_profile"
@@ -47,8 +44,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="10sp"
-        app:layout_constraintLeft_toRightOf="@+id/text_message_body"
+        app:layout_constraintLeft_toRightOf="@+id/image_message_body"
         android:layout_marginLeft="4dp"
-        app:layout_constraintBottom_toBottomOf="@+id/text_message_body" />
+        app:layout_constraintBottom_toBottomOf="@+id/image_message_body" />
 
 </android.support.constraint.ConstraintLayout>
