change listView to use Chatkit - changes models class to use Matrix info

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,8 +8,8 @@
     tools:context=".activity.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <ListView
+    <com.stfalcon.chatkit.dialogs.DialogsList
         android:id="@+id/chatListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 </android.support.constraint.ConstraintLayout>
