--- a/app/src/main/res/layout/walkietalkie.xml
+++ b/app/src/main/res/layout/walkietalkie.xml
@@ -18,32 +18,38 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
-    <RelativeLayout android:padding="12dp"
+
+    <RelativeLayout
         android:id="@+id/mainlayout"
-        android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:padding="12dp">
 
         <TextView
             android:id="@+id/sipLabel"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_centerHorizontal="true"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-        />
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
-        <ToggleButton
-            android:layout_height="400dp"
-            android:layout_width="400dp"
-            android:text="@+string/talk"
-            android:id="@+id/pushToTalk"
+        <Button
+            android:id="@+id/makeCall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="52dp"
+            android:layout_marginTop="131dp"
+            android:text="CALL" />
 
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/btn_record"
-            android:textOff=""
-            android:textOn=""
-            android:layout_marginTop="-20dp" />
-
+        <Button
+            android:id="@+id/endCall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignTop="@+id/makeCall"
+            android:layout_marginEnd="85dp"
+            android:text="HANGUP" />
     </RelativeLayout>
 </FrameLayout>
