--- a/app/src/main/res/layout/activity_sip_call.xml
+++ b/app/src/main/res/layout/activity_sip_call.xml
@@ -49,4 +49,10 @@
         android:layout_height="wrap_content"
         android:text="Call" />
 
+    <Button
+        android:id="@+id/buttonEndCall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Hangup" />
+
 </LinearLayout>
