User info view improved with avatar. Now we can see room members user info.

--- a/app/src/main/res/layout/activity_room_info.xml
+++ b/app/src/main/res/layout/activity_room_info.xml
@@ -7,6 +7,8 @@
     android:orientation="vertical"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
+    android:paddingBottom="10dp"
+    android:paddingTop="10dp"
     tools:context=".activity.RoomInfoActivity">
 
     <LinearLayout
@@ -36,6 +38,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Members"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 
     <ListView
