--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,12 +12,30 @@
     tools:context=".activity.UserInfoActivity">
 
     <TextView
+        android:id="@+id/textViewAvatar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Avatar"
+        android:textAppearance="@android:style/TextAppearance.Material.Large"
+        android:paddingBottom="5dp"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/profileImageView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@android:color/transparent" />
+
+    <TextView
         android:id="@+id/textViewId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/userId"
         android:textAlignment="viewStart"
-        android:textAppearance="@android:style/TextAppearance.Material.Large" />
+        android:paddingBottom="5dp"
+        android:paddingTop="10dp"
+        android:textAppearance="@android:style/TextAppearance.Material.Large"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textViewUserId"
@@ -24,6 +43,7 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textAlignment="center"
+        android:paddingBottom="10dp"
         android:textAppearance="@android:style/TextAppearance.Material.Headline"
         android:visibility="visible" />
 
@@ -33,7 +53,9 @@
         android:layout_height="wrap_content"
         android:text="@string/userName"
         android:textAlignment="viewStart"
-        android:textAppearance="@android:style/TextAppearance.Material.Large" />
+        android:paddingBottom="5dp"
+        android:textAppearance="@android:style/TextAppearance.Material.Large"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textViewUserName"
@@ -43,4 +65,5 @@
         android:textAlignment="center"
         android:textAppearance="@android:style/TextAppearance.Material.Headline"
         android:visibility="visible" />
+
 </LinearLayout>
